--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,15 +13,22 @@
 	<div>
 		<form action="/upload" method="POST" enctype="multipart/form-data">
 			<div>
-				<label for="name">Image Title</label>
-				<input type="text" id="name" placeholder="Name"
+				<label for="MangaName">Name of the Manga</label>
+				<input type="text" name="MangaName" placeholder="MangaName" required>
+			</div>
+			<div>
+				<label for="ChapterNo">Chapter number</label>
+				<input type="number" name="ChapterNo" placeholder="should only be a number" required>
+			</div>
+			<div>
+				<label for="name">Name of the chapter</label>
+				<input type="text" id="name" placeholder="Chapter Name"
 					value="" name="name" required>
 			</div>
-			
 			<div>
-				<label for="image">Upload Image</label>
-				<input type="file" id="image"
-					name="image" value="" required>
+				<label for="images">Upload Image</label>
+				<input type="file" id="images"
+					name="images" value="" multiple required>
 			</div>
 			<div>
 				<button type="submit">Submit</button>
@@ -35,15 +42,15 @@
 	<div>
 		<% items.forEach((image)=> { %>
 		
-			<div>
-				<img src="/uploads/<%=image.image.path%>" alt="Image of <%= image.name%>"
-				width="100" height="130">
+			<div class="img-display">
+				<img src="/uploads/<%=image.image.path%>" alt="Image of <%= image.ChapterName%>"
+				 height="300">
 				
 				<br>
-				<img src="data:image/png;base64,
-				<%=image.image.data%>.toString('base64)" alt="from db" width="50" height="80">
+				<!-- <img src="data:image/png;base64, -->
+				<!-- <%=image.image.data%>.toString('base64)" alt="from db" width="50" height="80"> -->
 				<div>
-					<h5><%= image.name %></h5>
+					<h5><%= image.ChapterName %></h5>
 
 				</div>
 			</div>
@@ -51,5 +58,14 @@
 		<% }) %>
 	</div>
 </body>
-
+<style>
+	.img-display{
+		display: flex;
+		align-self: center;
+		align-items: center;
+	}
+	img{
+		align-self: center;
+	}
+</style>
 </html>
